--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ RewriteRule ^add/$ ./index.php?page=add [L,QSA]
                         <li class="icon express"><a href="http://developer.myob.com/contact">Express your interest</a></li>
                         <li class="icon doc"><a href="http://developer.myob.com/docs">API Documentation</a></li>
                         <li class="icon explore"><a href="" class="muted">API Explorer</a></li>
-                        <li class="icon samples"><a href="" class="muted">API Samples</a></li>
+                        <li class="icon samples"><a href="http://developer.myob.com/docs/read/resources/code_samples/" >API Samples</a></li>
                         <li class="icon blog"><a href="http://myobapi.tumblr.com">MYOBapi Blog</a></li>
                         <li class="icon "><a href="http://www.myob.com">MYOB Corporate</a></li>
                     </ul>
